# dream-emu

./: .censorship.txt  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  TODO.md  before-refactor.txt  build.bat  build.ps1  clean.bat  comptimes.txt  deps.ps1  dist.bat  dist.ps1  docker-web-run.ps1  docker-web.sh  dream2  engine_conf.ini  gen.ps1  install_xp.ps1  package.ps1  project.godot  publish.sh  run  run.bat  run.ps1  shared.hpp  shell.bat  temple2  tools.ps1
.github/workflows/: compile.yaml  compile.yml
.run/: dreamemu_client.run.xml
Notes/: Nieuwe sectie 1.one  Notitieblok openen.onetoc2
assets/: GUITheme.tres  gui_fade-formula.ggb  mesh_garden_start.blend1  mesh_garden_start.mtl  mesh_hub.blend1  mesh_hub.mtl  mesh_japanese_temple.blend  mesh_japanese_temple.mtl  mesh_test_bugatti.mtl  mesh_test_dragon.mtl  mesh_test_tower.blend  mesh_test_tower.mtl  palette.png.import
assets/bricks/: Bricks_01-128x128.png.import  Bricks_02-128x128.png.import  Bricks_03-128x128.png.import  Bricks_04-128x128.png.import  Bricks_05-128x128.png.import  Bricks_06-128x128.png.import  Bricks_07-128x128.png.import  Bricks_08-128x128.png.import  Bricks_09-128x128.png.import  Bricks_10-128x128.png.import  Bricks_11-128x128.png.import  Bricks_12-128x128.png.import  Bricks_13-128x128.png.import  Bricks_14-128x128.png.import  Bricks_15-128x128.png.import  Bricks_16-128x128.png.import  Bricks_17-128x128.png.import  Bricks_18-128x128.png.import  Bricks_19-128x128.png.import  Bricks_20-128x128.png.import  Bricks_21-128x128.png.import  Bricks_22-128x128.png.import  Bricks_23-128x128.png.import  Bricks_24-128x128.png.import  Bricks_25-128x128.png.import
assets/gfx/: fence.png.import  noise.png.import  tree.png.import
assets/grass/: Grass_01-128x128.png.import  Grass_02-128x128.png.import  Grass_03-128x128.png.import  Grass_04-128x128.png.import  Grass_05-128x128.png.import  Grass_06-128x128.png.import  Grass_07-128x128.png.import  Grass_08-128x128.png.import  Grass_09-128x128.png.import  Grass_10-128x128.png.import  Grass_11-128x128.png.import  Grass_12-128x128.png.import  Grass_13-128x128.png.import  Grass_14-128x128.png.import  Grass_15-128x128.png.import  Grass_16-128x128.png.import  Grass_17-128x128.png.import  Grass_18-128x128.png.import  Grass_19-128x128.png.import  Grass_20-128x128.png.import  Grass_21-128x128.png.import  Grass_22-128x128.png.import  Grass_23-128x128.png.import  Grass_24-128x128.png.import  Grass_25-128x128.png.import
assets/gui/: save-warning.xcf  splash.xcf
assets/levels/: level001.png.import  savedmap001.comps
assets/rocks/: RockGrassy0142.png.import
assets/roofs/: Roofs_01-128x128.png.import  Roofs_02-128x128.png.import  Roofs_03-128x128.png.import  Roofs_04-128x128.png.import  Roofs_05-128x128.png.import  (+20 more)
assets_space/: TODO.md  packer-project.tpproj  racepreview.aseprite
client/: CMakeLists.txt  assets.cpp  client.cpp  drawing.cpp  game.cpp  linker.cpp  linker.hpp  session.cpp
client/native/: linker.cpp  linker.hpp  linker_linux.cpp  linker_win.cpp
client/src/: assets.cpp  client.cpp  drawing.cpp  linker.hpp
dream/: CMakeLists.txt  billboard.cpp  client.c  client.cpp  game.cpp  session.c
dream/src/: client.c  client.cpp  client.h  client_win.cpp  dream_entity.c  dream_entity.h  dreams.c  dreams.cpp  dreams.h  editor.c  editor.cpp  editor.h  entity.c  mask.c  mask.h  prefs.c  prefs.cpp  prefs.h  rlights.h  scene.c  scene.cpp  scene.h  session.c  session.h  settings.c  settings.def  settings.h
forge/: .gitignore  LICENSE.txt  README.md  a.out  forge-sln.sln  forge-sln.vcxproj  forge-sln.vcxproj.filters  forge.bat  forge.c  forge.cpp  forge.sh  run.bat  utils.c  utils.cpp
game/: CMakeLists.txt  blocks.cpp  game.cpp  levels.cpp  logger.cpp  raylite.hpp  shared.hpp  tiles.cpp
magma/: .gitignore  CMakeDebloat.txt  CMakeLists.txt  README.md  build.bat  build.ps1  deps.ps1
magma/engine/: magma.h  mmath.cpp  mwindow.cpp  win32_magma.cpp  win32_window.cpp
magma/src/: CMakeLists.txt  array.c  array.h  assets.c  assets.cpp  assets.h  console.cpp  couroutines.h  editor.cpp  editor_2d.cpp  editor_utils.cpp  entity.c  entity.cpp  entity.h  entity_extra.cpp  graphics.cpp  gui.cpp  gui_inputbox.cpp  gui_linux_inputbox.cpp  gui_win_inputbox.cpp  ioutils.cpp  list.c  list.cpp  list.h  logger.cpp  logger.h  magma.c  magma.h  magma_entity.hpp  magma_extra.h  magma_gui.hpp  magma_types.h  main_menu.c  main_menu.cpp  main_menu.h  math_custom.h  memory.h  memory_custom.cpp  memory_custom.h  models.cpp  (+10 more)
magma/tools/: CMakeLists.txt
magma/tools/assetpacker/: deflation.cpp
magma/tools/deflation/: CMakeLists.txt  README.md  deflated_assets.cpp  deflated_assets.h  deflation.c  deflation.cpp
magma/tools/deflation/cli/: CMakeLists.txt  deflation.cpp
magma/tools/mgexplorer/: CMakeLists.txt  README.md  explorer.h  launcher.cpp
magma/tools/mgexplorer/src/: explorer.cpp  explorer.h  launcher.cpp
magma/tools/palgen/: .gitignore  CMakeLists.txt  build.bat  palgen.cpp
player/: GUILayer.tscn  Player.tscn  icon.png.import  player_gui.gd
raw_assets/: map_savedmap001.comps  mesh_garden_start.blend  mesh_hub.blend  mesh_test_tower.blend
raw_assets_temple/: map_blockswplayer.comps  map_flying_blocks.comps  map_mylevel_.comps  pal_dusk.pal  pal_night.pal
save/: engine_conf.ini
shared/: arena.cpp  assets.c  assets.cpp  assets.h  entity.c  entity.h  logger.c  logger.h  magma.c  magma.h  mem_array.cpp  shared.hpp
sources/: assets.cpp  assets.hpp  common.hpp  game.cpp  levels.cpp  main.cpp
space/: CMakeLists.txt  assets.cpp  client.c  client.cpp  drawing.cpp  gizmos.cpp
src/: magma.h  main.rs  mmath.cpp  win32_magma.cpp
temple/: CMakeLists.txt  TODO.md  assets.ps1  build.bat  test.comps
temple/raw_assets/: frag_palette_switch.fs  map_fluff_overload.comps  map_mylevel.comps  pal_brown.pal  pal_warm.pal  pal_warm1.pal  spr_player_fox.xcf
temple/source/: temple.cpp
temple/src/: client.c  client.cpp  client.hpp  client_win.c  client_win.cpp  level_data.h  level_select.h  level_select.hpp
tools/: relative_mats.py
(+98 files in other folders)
