[package]
name = "dream-emu-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
include_dir = { version="0.7.3", features=['glob'] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.raylib]
version = "4.5.0"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"
